[package]
name = "function_timer"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.103", features = ["full"] }
temp-env = "0.3.6"
tracing = "0.1.41"

[dev-dependencies]
tokio = {version = "1.45.1", features = ["macros", "rt-multi-thread"]}
